--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>ReactJS.berlin &mdash; Berlin's ReactJS Usergroup</title>
-    <meta name="description" content="ReactJS.berlin is a usergroup focused on ReactJS and related
-     topics. We meet regularly each month at 7:00 p.m. @bitcrowd office,
-     Oranienstr. 6 in Berlin-Kreuzberg.">
+    <meta name="description"
+      content="ReactJS.berlin is was an early usergroup focused on ReactJS and related
+      topics. We at bitcrowd are happy that the React community in berlin has spawned so many usergroups and events that it does not need this meetup as support any longer.">
     <meta name="keywords" content="ReactJS, JavaScript, Usergroup, Berlin, Programming, JS">
     <meta name="author" content="ReactJS.berlin">
     <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1">
@@ -23,7 +23,9 @@
     <link rel="stylesheet" media="only screen and (min-width: 768px)" href="css/768.css?v=1">
     <link rel="stylesheet" media="only screen and (min-width: 992px)" href="css/992.css?v=1">
     <link rel="stylesheet" media="only screen and (min-width: 1382px)" href="css/1382.css?v=1">
-    <link rel="stylesheet" media="only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2)" href="css/2x.css?v=1">
+    <link rel="stylesheet"
+      media="only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2)"
+      href="css/2x.css?v=1">
 
     <link href="http://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet" type="text/css">
 
@@ -36,6 +38,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   </head>
+
   <body>
     <header role="banner" class="content clearfix">
       <div class="clearfix">
@@ -45,105 +48,130 @@
           </a>
         </h1>
         <p class="ug-info triangle-border left">
-          ReactJS.berlin is a usergroup focused on ReactJS and related
-     topics. We meet regularly each month at 7p.m.
-          <a href="http://bitcrowd.net" title="bitcrowd.net office">@bitcrowd office</a>,
-          Oranienstr. 6 in Berlin-Kreuzberg. Talks start at 7:30pm.
+          ReactJS.berlin was an early ReactJS usergroup run by <a href="http://bitcrowd.net"
+            title="bitcrowd.net office">@bitcrowd</a>. We at bitcrowd are happy that the React community in berlin has now
+          spawned so many usergroups and events that it does not need this regular meetup as support any longer.
         </p>
       </div>
     </header>
     <main role="main" class="content clearfix">
       <article class="clearfix">
         <header class="clearfix center">
-          <h2>No meetup scheduled</h2>
+          <h2>This ReactJS meetup group has been closed</h2>
         </header>
         <!-- TALKS -->
         <section class="clearfix">
-          <div class="three-cols clearfix">
+          <div class="clearfix">
             <!-- THIS IS WHAT A TALK ABSTRACT LOOKS LIKE
-            <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
-              <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
-              </p>
-              <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
-              </p>
-            </div>
-            -->
-            <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
-              <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
-              </p>
-              <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
-              </p>
-            </div>
-            <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
-              <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
-              </p>
-              <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
-              </p>
-            </div>
-            <div class="speaker">
-              <h3>Free slot</h3>
-              <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
-              <p>
-                You did some great stuff with JavaScript? You want to show it to the community?
-              </p>
-              <p>
-                Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
-                Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
-              </p>
-            </div>
+              <div class="speaker">
+                <h3>Free slot</h3>
+                <p class="speaker-name">This slot could be yours!<br />Submit your talk now.</p>
+                <p>
+                  You did some great stuff with JavaScript? You want to show it to the community?
+                </p>
+                <p>
+                  Drop us a line on your topic on <a href="http://twitter.com/reactberlin">
+                  Twitter</a> or <a href="https://github.com/reactjs-berlin/reactjs.berlin">create a pull request on GitHub</a> to this page right away.
+                </p>
+              </div>
+              -->
           </div>
         </section>
       </article>
     </main>
+    <main role="main" class="content clearfix">
 
+      <div class="clearfix">
+        <div>
+          <p>
+            When we started this meetup group in 2015, it was the first ReactJS focused meetup in Berlin and the comunity
+            was still young. Now, some years and many great meetups later, several other meetups, courses and events
+            around React have evolved. So we find that running just another one does not make sense.
+          </p>
+        </div>
+
+    </main>
     <footer class="content" role="complimentary">
-      <div class="clearfix three-cols">
-        <div>
-          <h2>Get in touch</h2>
-          <ul>
-            <li>
-              Follow ReactJS.berlin on <a href="http://twitter.com/reactberlin">Twitter</a>
-            </li>
-            <li>
-              Join our <a href="http://www.meetup.com/React-Berlin/">Meetup Group</a>
-            </li>
-            <li>
-              Watch the code on <a href="https://github.com/reactjs-berlin/reactjs.berlin">Github</a>
-            </li>
-          </ul>
+      <div>
+        <h2>Looking for a React meetup, event or course?</h2>
+        <p>
+          If you are looking for a React meetup, event or course, we suggest to have a look at the <a
+            href="https://www.meetup.com/topics/reactjs/de/berlin/?country=de&zipstatecity=berlin&state=&radius=40"
+            title="Berlin's finest JavaScript Usergroup">meetup.com groups</a>. Especially <a href="http://berlinjs.org/"
+            title="Berlin's finest JavaScript Usergroup">berlinjs.org</a> is a great starting point.
+        </p>
+      </div>
+
+      </div>
+      <div>
+        <h2>Need a location for your event?</h2>
+        <p>
+          The <a href="http://bitcrowd.net" title="bitcrowd.net office">@bitcrowd</a> office has an event space that you
+          can use for community events. It has a capacity of 90 people (seated) or 30 people (with desks for courses).
+        </p>
+      </div>
+      <div>
+        <h2>Need help from React experts?</h2>
+        <p>
+          The people at <a href="http://bitcrowd.net" title="bitcrowd.net office">@bitcrowd</a> have created many ReactJS
+          applications for their clients over the past years. Just drop us and e-mail or call us and we see how we can
+          help your project.
+        </p>
+        <div class="l-grid l-grid--wide" itemscope="" itemtype="http://schema.org/Organization">
+          <div class="l-grid__item l-width--6-of-12@medium">
+            <ul class="o-list-reset t-margin--bottom t-margin--top">
+              <li class="t-margin--bottom" itemprop="email">
+                <a class="o-button o-button--brand-one o-flex" href="mailto:info@bitcrowd.net?Subject=Hallo bitcrowd!">
+                  <svg class="o-icon o-icon--medium o-button__icon" role="presentation">
+                    <use
+                      xlink:href="/assets/icons-6340dd98fa6f1b96aa59bc2fa26fa333888b737354909e31a45c9ab8f529ca2a.svg#envelope">
+                    </use>
+                  </svg>
+                  <span class="o-flex__primary">
+                    info@bitcrowd.net
+                  </span>
+                </a>
+              </li>
+              <li class="t-margin--bottom" itemprop="twitter">
+                <a class="o-button o-button--brand-four o-flex" href="https://twitter.com/bitcrowd">
+                  <svg class="o-icon o-icon--medium o-button__icon" role="presentation">
+                    <use
+                      xlink:href="/assets/icons-6340dd98fa6f1b96aa59bc2fa26fa333888b737354909e31a45c9ab8f529ca2a.svg#twitter">
+                    </use>
+                  </svg>
+                  <span class="o-flex__primary">
+                    @bitcrowd
+                  </span>
+                </a>
+              </li>
+              <li class="t-margin--bottom" itemprop="telephone">
+                <a class="o-button o-button--brand-six o-flex" href="tel:493055577597">
+                  <svg class="o-icon o-icon--medium o-button__icon" role="presentation">
+                    <use
+                      xlink:href="/assets/icons-6340dd98fa6f1b96aa59bc2fa26fa333888b737354909e31a45c9ab8f529ca2a.svg#telephone">
+                    </use>
+                  </svg>
+                  <span class="o-flex__primary"><span class="o-visuallyhidden">Call us on </span>+49 30 555 77 597</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="l-grid__item l-grid__item--bordered@medium l-width--6-of-12@medium t-text-align--center@small-only">
+            <h4>Come to see us!</h4>
+            <span itemprop="name">bitcrowd GmbH.</span>
+            <address class="t-margin--bottom" itemprop="address" itemtype="http://schema.org/PostalAddress">
+              <span itemprop="streetAddress">Oranienstr. 6</span>
+              <br>
+              <span itemprop="postalCode">10997</span>
+              <span itemprop="addressLocality">Berlin<br>Germany</span>
+            </address>
+            <a class="o-link o-link--alt"
+              href="https://www.google.de/maps/place/Oranienstra%C3%9Fe+6,+10997+Berlin/@52.4998919,13.4244531,18z/data=!3m1!4b1!4m5!3m4!1s0x47a84e350a669333:0x3dc79e96d74bd57b!8m2!3d52.4998919!4d13.425056">Open
+              in google maps</a>
+          </div>
         </div>
-        <div>
-          <h2>The team</h2>
-          <p>
-            ReactJS.berlin is organized by
-            <a href="http://www.twitter.com/chris_bitcrowd" title="Follow Chris on Twitter">Christoph Beck</a>
-            from
-            <a href="http://www.twitter.com/bitcrowd" title="Follow bitcrowd on Twitter">@bitcrowd</a>. Interested in joining the organizers team? Drop us a line on twitter or meetup :)
-            Design by <a href="http://www.twitter.com/m_besser" title="Follow Matti on Twitter">Matti Besser</a> &amp; <a href="http://www.twitter.com/plankton" title="Follow Darren on Twitter">Darren Cadwallader</a>.
-          </p>
-        </div>
-        <div>
-          <h2>Supporters</h2>
-          <p>
-            Our Meetups are hosted by <a href="http://bitcrowd.net">bitcrowd.net</a>.
-            The template for this page is the gloriuos <a href="http://berlinjs.org/" title="Berlin's finest JavaScript Usergroup">berlinjs.org page</a> with kind permission of <a href="http://www.twitter.com/rmehner" title="Follow Robin on Twitter">Robin Mehner</a>.
-          </p>
-        </div>
+      </div>
+
       </div>
       <section>
         <div class="clearfix one-col">
@@ -151,19 +179,21 @@
             <h2>Past Meetups</h2>
             <ul>
               <li>
-                <a href='index_20180804.html'>04.08.2018 beginners workshop by</a> <a href="https://github.com/manjula91">Manjula Dube</a>
+                <a href='index_20180804.html'>04.08.2018 beginners workshop by</a> <a
+                  href="https://github.com/manjula91">Manjula Dube</a>
               </li>
               <li>
                 <a href='index_20170918.html'>18.09.2017 on Ladda, MobX and Inversify</a>
               </li>
-               <li>
+              <li>
                 <a href='index_20170626.html'>26.06.2017 on GraphQL, React Storybook and Mantaining UI consistency</a>
               </li>
               <li>
                 <a href='index_20170320.html'>20.03.2017 on Animations, ClojureScript and and Mimstris</a>
               </li>
               <li>
-                <a href='index_20170123.html'>23.01.2017 on Angular1 to React migration and code splitting with webpack</a>
+                <a href='index_20170123.html'>23.01.2017 on Angular1 to React migration and code splitting with
+                  webpack</a>
               </li>
               <li>
                 <a href='index_20161212.html'>12.12.2016 on Flowtype, Deploying React and Redux-based React Native</a>
@@ -183,7 +213,8 @@
               in the offending person being expelled from the meetup.
             </p>
             <p>
-              For details on what kinds of behaviour are not tolerated and consequences for violating these rules, we refer to the <a href="http://rubyberlin.github.io/code-of-conduct">Berlin Code of Conduct</a>.
+              For details on what kinds of behaviour are not tolerated and consequences for violating these rules, we
+              refer to the <a href="http://rubyberlin.github.io/code-of-conduct">Berlin Code of Conduct</a>.
             </p>
           </div>
           <div>
@@ -191,17 +222,21 @@
             <p>
               This site is run by
               <a href="http://bitcrowd.net" title="bitcrowd.net software development for startups">bitcrowd</a> -
-              please find <a href="http://bitcrowd.net/legal" title="bitcrowd.net software development legal information">imprint, privacy and other legal information here</a>.
+              please find <a href="http://bitcrowd.net/legal"
+                title="bitcrowd.net software development legal information">imprint, privacy and other legal information
+                here</a>.
             </p>
           </div>
         </div>
       </section>
     </footer>
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      (function (i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date(); a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+      })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
       ga('create', 'UA-87838740-1', 'auto');
       ga('send', 'pageview');
     </script>
